public/css/style.css
/************************
        Utility
************************/

* {
	box-sizing: border-box;
}

html, body {
	position: relative;
	background-color: #B2DFDB;
	height: 100vh;
}

.go-left {
	float: left !important;
}

.go-right {
	float: right !important;
}

.column-container {
	margin-top: 70px;
}

.floating-container {
	border-radius: 15px !important;
	background-color: #f2f2f2;
}

.nav-container {
	display: flex;
	flex-align: right;
	align-items: center;
	height: 60px;
	margin-bottom: 10px;
	padding: 0px 10px;
	line-height: 60px;
}

.nav-container > * {
	margin-right: 10px;
	height: 41px;
}
.nav-container > .back-to-browse {
	margin-right: auto;
}

.nav, .pagination, .carousel, .panel-title, a { 
	cursor: pointer; 
}

.section-header {
	border-radius: 15px 15px 0px 0px;
	padding: 0px 10px;
	height: 60px;
	line-height: 60px;
	background-color: #D3D3D3;
}

.ng-binding {
	display: block;
	padding: 10px 15px;
}

.section-text {
	padding-left: 10px;
	font-weight: lighter;
	display: inline;
	text-align: center;
}

.dropdown .section-text {
	padding-left: 0px;
}

.bottom-container {
	position: absolute;
	bottom: 0px;
	padding: 10px 10px;
	width: 100%;
}

.big-size {
	font-size: 20px;
}

.regular-size {
	font-size: 16px;
}

.small-padding {
	padding: 5px;
}

.normal-padding {
	padding: 15px;
}

@media (max-width: 600px) {
	.desktop-only {
		display: none !important;
	}
}

.inline-display {
	display: inline !important;
}


/************************
         Schedule
*************************/

/* Header */

.social-icons {
	display: flex;
	align-items: center;
}
.social-icons a+a {
	margin-left: 20px;
}
.social-icons i {
	color: black;
}
	.social-icons i:hover {
		color: #337ab7;
	}

/* Schedule */

div.fc-view, .fc-today {
	background-color: #EFEFEF !important;
}

.fc-event-title {
	font-weight: bold;
}

.fc-event-time {
	font-weight: bold;
}

.fc-event-inner {
	color: black;
}

.fc-title {
	white-space:nowrap;
	text-overflow:ellipsis !important;
	overflow: hidden;
	width: 100%;
}

@media(max-width: 500px) {
	.fc-day-header {
		font-size: 10px !important;
	}
	.fc-title {
		font-size: 10px !important;
	}
}

#prev-caret {
	color: #ffffff;
	font-size: 50px;
	position: absolute;
	top: 6px;
	left: 13px;
}

#next-caret {
	color: #ffffff;
	font-size: 50px;
	position: absolute;
	top: 6px;
	left: 40px;
}

.schedule-number {
	padding-top: 0;
	padding-bottom: 0;
}

.toggle-caret {
	color: #ffffff;
	font-size: 50px;
	cursor: pointer;
}

.add-courses-button {
	height: 40px;
	position: absolute;
	top: 10px;
	right: 13px;
}

.top-right {
	position: absolute;
	top: 5px !important;
	right: 5px !important;
}

.instructions {
	position: relative !important;
}

/************************
        Accordion
*************************/

button.dropdown-toggle {
	font-size: 18px;
	display: inline-block;
	margin-top: 0px;
}

div.dropdown {
	display: table-cell;
	vertical-align: middle;
	text-align: center;
}

div.course-search {
	padding-top: 10px;
	padding-left: 16px;
	padding-right: 16px;
	width: 100%;
}

div.course-search > input.course-search.form-control {
	border-top-right-radius: 5px;
	border-bottom-right-radius: 5px;
	font-size: 20px;
}

h4.panel-title {
	position: relative;
}

.add-button {
	position: absolute;
	top: 3px;
	right: 5px;
	padding: 10px;
	font-size: 22px;
}

.add-button > .add {
	color: #262626;
}
.add-button > .add:hover {
	color: green;
}
.add-button > .added {
	color: green;
}

.panel-default > .panel-heading {
	background-color: #BBDEFB;
	border-radius: 0px;
	padding: 0px;
}

.panel-default > .panel-heading .accordion-toggle > span {
	padding: 15px 15px;
}

/*Single panel*/
.panel-group .panel {
	border-color: black;
	border-width: 1px;
	border-radius: 5px;
	overflow: hidden;
}


.panel-group {
	margin-bottom: 0px; /* override bootstrap 20px */
}
.panel-group + .panel-group {
	margin-top: 20px;
}

div.panel-body {
	background-color: #E9EFF9 !important;
	border-radius: 0px;
	min-width: 100%;
}

div.panel-collapse {
	background-color: #E9EFF9 !important;
}

.course-description {
	font-size: 16px;
	min-width: 100%;
	margin: 0px !important;
}

/*#welcome-banner {
	margin-top: 70px;
	border-radius: 15px;
}*/


/***********************
      Added List
************************/

@media (max-width: 768px) {
	.added-container {
		display: none !important;
	}
}

.floating-container {
	overflow: hidden;
}

.added-container {
	margin-bottom: 20px;
	position: fixed;
	width: 32vw;
	overflow: hidden;
}

.added-container .section-header {
	display: flex;
	flex-align: center;
}

	.view-schedules {
		margin-left: auto;
		margin-top: 8px;
		margin-bottom: 8px;
		height: 41px;
	}

.added-list {
	display: flex;
	flex-direction: column;
	min-height: 73px;
	background-color: white;
	left: 0px;
	padding-left: 0px;
	overflow: hidden;
}

.added-list .list-group-item {
	border-radius: 0px;
	border: none;
	border-top: 1px solid #ddd;
	border-bottom: 1px solid #ddd;
}

.added-footer {
	margin-top: auto;
	padding: 15px;
	border: 1px solid white;
	border-radius: 0px 0px 15px 15px;
}

.remove-icon {
	border-radius: 3px;
	padding: 5px 5px;
	position: absolute;
	top: 13px;
	right: 13px;
	color: #ffffff;
	font-size: 15px;
}

.generate-schedules-button {
	border-radius: 3px;
	padding: 5px 5px;
	position: absolute;
	top: 9px;
	right: 13px;
	color: #ffffff;
	height: 40px;
}

/*************************
           Modal
**************************/

div.modal-content {
	border-radius: 15px;
	position: relative;
}

/************************
          Header
*************************/

.navbar.navbar-default {
	position: fixed !important;
	top: 0px;
	width: 100vw;
	z-index: 100;
}

.navbar .navbar-right {
	margin-right: 0px;
}

/************************
          Footer
*************************/

.footer-bit, .push {
	height: 4em;
}

.wrapper {
	min-height: 100%;
	height: 100%;
	margin: 0 auto -4em;
}

